# laba4

./: CMakeLists.txt  README.md  addworkdialog.cpp  addworkdialog.h  addworkdialog.ui  bonusstrategy.cpp  bonusstrategy.h  editworkdialog.cpp  editworkdialog.h  editworkdialog.ui  exceptions.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  payrolldepartment.cpp  payrolldepartment.h  validators.cpp  validators.h  worktype.cpp  worktype.h
